# google_maps_business_data_scraper

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
maps_scraper/: README.md  __init__.py  google_map_scraper.py  maps.py  province.py  requirements.txt  scraper.py  utils.py  website_email_extractor.py
output/: .~lock.results_hotel_Sarego_Italy.csv#
