[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maps-scraper"
version = "1.0.0"
description = "Google Maps business lead scraper with email extraction"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "lxml>=4.9.0",
]

[tool.setuptools.packages.find]
include = ["maps_scraper*"]

[project.scripts]
maps-scraper = "maps_scraper.scraper:main"
